2005-09-28  Rohit Kumar <rokumar@novell.com>
	* examples/filetransfer.c, rfb/rfb.h, configure.ac,
	  libvncserver/{auth,cargs,main,rfbserver,sockets}.c,
	  libvncserver/tightvnc-extension/*:
	  Implement TightVNC's file transfer protocol.

2005-09-27  Rohit Kumar <rokumar@novell.com>
	* libvncserver/{cargs,sockets,main,rfbserver}.c,
	  rfb/rfb.h: Provide a generic means to extend the RFB
	  protocol: rfbRegisterProtocolExtension(extension). This
	  deprecates the current (very limited) option to override
	  rfbScreenInfoPtr->processCustomClientMessage(client).

2005-09-26  Rohit Kumar <rokumar@novell.com>
	* libvncserver/{auth,main,rfbserver}.c, rfb/{rfb,rfbproto}.h:
	  support VNC protocol version 3.7. This allows to add security
	  types.

2005-08-21  Alberto Lusiani <alusiani@gmail.com>
	* libvncserver.spec.in: split rpm into libvncserver, -devel and x11vnc

2005-07-12  Karl Runge <runge@karlrunge.com>
	* x11vnc: tweaks for release, fix queue buildup under -viewonly

2005-07-10  Karl Runge <runge@karlrunge.com>
	* x11vnc: -grab_buster for breaking XGrabServer deadlock, fix
	  scrolls and copyrect for -clip and -id cases.

2005-07-06  Karl Runge <runge@karlrunge.com>
	* x11vnc: -gui tray now embeds in systray; more improvements to gui.

2005-07-01  Karl Runge <runge@karlrunge.com>
	* libvncserver/httpd.c: make sure httpListenSock >=0 in rfbHttpCheckFds
	* x11vnc: add simple "-gui tray" mode for small icon like x0rfbserver
	  had (someday/somehow to auto embed in a tray/dock)

2005-06-28  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncclient/zrle.c: fix handling of raw and fill subtypes
	  (off-by-one and off-by-many bug)

2005-06-27  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: move deferUpdateTime and maxRectsPerUpdate
	  defaults to before rfbProcessArguments().

2005-06-18  Karl Runge <runge@karlrunge.com>
	* configure.ac: don't use -R on HP-UX and OSF1.
	* x11vnc: don't free the current cursor, close stderr